# Maze_Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
engine/: CMakeLists.txt  Readme.md
engine/assethandling/: CMakeLists.txt
engine/assethandling/include/: AssetHandler.hpp  AssetTypes.hpp
engine/assethandling/src/: AssetManager.inl  AssetTypesImpl.hpp
engine/assethandling/tests/: AssetHandlerTests.cpp  InputMapImporterTests.cpp  MaterialImporterTests.cpp  MaterialImportertests.cpp  OBJImporterTests.cpp  ShaderPreProcessorTests.cpp
engine/components/: CMakeLists.txt  Camera.hpp  Collider.hpp  Lights.hpp  Mesh.hpp  MeshRenderer.hpp  MotionIntent.hpp  Readme.md  Rigidbody.hpp  Transform.hpp
engine/components/ui/: Button.hpp  Image.hpp  RectTransform.hpp  Text.hpp
engine/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  ColliderCache.hpp  DebugUIDrawer.cpp  DebugUIDrawer.hpp  DebugViewData.hpp  EngineController.cpp  EngineController.hpp  GameWorld.hpp  IApplication.hpp  IEngine.hpp  IInput.hpp  IScene.hpp  ISceneManager.hpp  InputManager.cpp  InputManager.hpp  Readme.md  SceneArgs.hpp  SceneContext.hpp  SceneManager.cpp  SceneManager.hpp  SceneRegistry.cpp  SceneRegistry.hpp  ServiceLocator.hpp  ServiceLocator.inl  Settings.hpp  Transform.cpp  Transform.hpp
engine/core/components/: Camera.hpp  Collider.hpp  InputReceiver.hpp  Mesh.hpp  MotionIntent.hpp  Transform.hpp
engine/core/settings/: Settings.hpp  SettingsHandler.cpp  SettingsHandler.hpp
engine/core/systems/: CameraSystem.cpp  CameraSystem.hpp  CommandSystem.cpp  CommandSystem.hpp  EngineEventSystem.cpp  EngineTestSystem.cpp  EngineTestSystem.hpp  InputReceiver.cpp  InputReceiver.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RectTransformSystem.cpp  RectTransformSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformSystem.cpp  TransformSystem.hpp  UiSystem.cpp  UiSystem.hpp
engine/debug/: CMakeLists.txt  Readme.md
engine/debug/include/: DebugBuilder.hpp  IDebugConsole.hpp
engine/debug/src/: DebugConsole.cpp  DebugConsole.hpp
engine/ecs/: CMakeLists.txt  Readme.md
engine/ecs/include/: ComponentEventBus.hpp  IComponent.hpp  IEngineSystem.hpp  IServiceToEcsProvider.hpp  ISystem.hpp  ISystemManager.hpp  IWorld.hpp  PhysicsEventBus.hpp  SystemManager.hpp  SystemWorld.hpp  World.hpp
engine/ecs/src/: CommandBuffer.cpp  CommandBuffer.hpp  CommandSystem.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentManager.inl  ComponentPool.cpp  ComponentPool.hpp  ComponentPool.inl  EngineBindToken.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  ISystem.cpp  SystemBinder.hpp  SystemManager.cpp  SystemMetaSorter.cpp  SystemMetaSorter.hpp  World.cpp  World.inl  WorldManager.cpp  WorldManager.hpp
engine/ecs/tests/: ComponentManager.cpp  ComponentManagerTests.cpp  ComponentPool.cpp  ComponentPoolTests.cpp  ComponentTests.cpp  EntityManager.cpp  EntityManagerTests.cpp  SystemManager.cpp  SystemManagerTests.cpp  SystemMetaSorterTests.cpp  SystemWorldTests.cpp
engine/environment/: CMakeLists.txt
engine/environment/include/: EnvInput.hpp  EnvironmentBuilder.hpp  FileReader.hpp  IFileManager.hpp  IFileReader.hpp  Input.hpp  Window.hpp
engine/environment/src/: EnvironmentBuilder.cpp  SDLInput.cpp  SDLInput.hpp  SDLWindow.cpp  SDLWindow.hpp
engine/input/: CMakeLists.txt  Readme.md
engine/input/include/: IInputManager.hpp  InputManagerBuilder.hpp
engine/input/src/: InputManager.cpp  InputManager.hpp  InputManagerBuilder.cpp  InputMapping.hpp
engine/input/tests/: InputManagerTests.cpp
engine/interface/: CMakeLists.txt  Readme.md
engine/interface/include/: IApplication.hpp
engine/physics/: CMakeLists.txt  Readme.md
engine/physics/include/: ClosestPoint.hpp  Overlap.hpp  Resolve.hpp  Sweep.hpp  Types.hpp
engine/physics/src/: ClosestPoint.cpp  Overlap.cpp  Resolve.cpp  Sweep.cpp
engine/physics/tests/: ClosestPointTests.cpp  FakeCollisionQueryService.hpp  MoverSolverTests.cpp  OverlapTests.cpp  PhysicsTests.cpp  ResolveTests.cpp  SweepTests.cpp  TypeUtiliesTests.cpp
engine/renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  Datatypes.hpp  PrimitiveMeshes.hpp  Readme.md  RenderController.cpp  RenderController.hpp  Renderable.cpp  Renderable.hpp
engine/renderer/include/: Datatypes.hpp  IRenderController.hpp  RenderControllerFactory.hpp  Renderer.hpp  RendererBuilder.hpp
engine/renderer/meshmanagement/: Mesh.hpp  MeshManager.cpp  MeshManager.hpp
engine/renderer/renderframework/: Renderer.hpp
engine/renderer/shadermanagement/: Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
engine/renderer/src/: OpenGLRenderer.cpp  OpenGLRenderer.hpp  PrimitiveMeshes.hpp  RenderController.cpp  (+2 more)
engine/scenemanagement/: CMakeLists.txt  Readme.md
engine/systems/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.hpp  Readme.md  RectTransformSystem.cpp  RectTransformSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TransformSystem.cpp  UiSystem.cpp  UiSystem.hpp
engine/text/: CMakeLists.txt  TextDummy.cpp  TextDummy.hpp
engine/utilities/: CMakeLists.txt
engine/window/: CMakeLists.txt
gameplay/: CMakeLists.txt  CameraControllerSystem.cpp  CameraControllerSystem.hpp  DebugGridDrawer.cpp  DebugGridDrawer.hpp  GameEndScene.cpp  GameEndScene.hpp  GameScene.cpp  GameScene.hpp  GameplayManager.cpp  GameplayManager.hpp  Inventory.hpp  ItemSystem.cpp  ItemSystem.hpp  KeyItem.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MeshHandler.cpp  MeshHandler.hpp  TestSystem.cpp  TestSystem.hpp
gameplay/commands/: LevelFinished.hpp  PauseCommand.hpp  QuitCommand.hpp
gameplay/components/: Door.hpp  DoorTrigger.hpp  Exit.hpp  Inventory.hpp  KeyItem.hpp
gameplay/mazegenerator/: Cell.hpp  DebugGridDrawer.cpp  DebugGridDrawer.hpp  MazeAlgorithm.cpp  MazeAlgorithm.hpp  MazeBuilder.cpp  MazeBuilder.hpp
gameplay/systems/: CameraControllerSystem.cpp  CameraControllerSystem.hpp  DoorAnimation.cpp  DoorAnimation.hpp  ExitSystem.cpp  ExitSystem.hpp  ItemSystem.cpp  ItemSystem.hpp  KeyAnimation.cpp  KeyAnimation.hpp  PauseSystem.cpp  PauseSystem.hpp  PlayerControllerSystem.cpp  PlayerControllerSystem.hpp
(+221 files in other folders)
